Fix stations staying tiny if collapsed while changing layout

--- a/client/src/components/dining-halls/combined-cafes.css
+++ b/client/src/components/dining-halls/combined-cafes.css
@@ -14,7 +14,6 @@
     color: #212121;
     display: flex;
     flex-direction: column;
-    width: min-content;
 }
 
 .station .title {
